--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -92,6 +92,8 @@ button {
   padding-top: 24px;
   padding-bottom: 24px;
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-logo-web {
@@ -217,6 +219,9 @@ button {
 }
 
 .example-img-text {
+  display: block;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .example-photo {
   width: 360px;
@@ -244,6 +249,9 @@ button {
 .example-border {
   border: 1px solid #e7e9fc;
   border-top: none;
+  border: 1px solid #f4f4fd;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   padding-top: 32px;
   padding-bottom: 32px;
   padding-left: 16px;
@@ -254,6 +262,9 @@ button {
   background-color: var(--color-grey, #2e2f42);
   padding-top: 100px;
   padding-bottom: 100px;
+  max-width: 1140px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer-logo {
@@ -293,5 +304,63 @@ button {
   max-width: 300px;
 }
 
+.footer-items {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--color-cloud, #f4f4fd);
+  margin-top: 18px;
+  max-width: 300px;
+}
+
 .footer-bottom {
+}
+
+.footer-soc-list {
+  display: flex;
+  gap: 16px;
+}
+.footer-title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5px;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.footer-soc-item {
+  width: 40px;
+  height: 40px;
+  gap: 16px;
+}
+.footer-soc-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:hover {
+  background-color: #31d0aa;
+}
+.footer-soc-icon {
+  fill: #ffffff;
+  width: 24px;
+  height: 24px;
+}
+
+.footer-soc {
+  margin-left: 120px;
+}
+.footer-soc-cont {
+  display: flex;
+  align-items: stretch;
+  max-width: 1128px;
 }
