--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,8 @@ button {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1140px;
+  max-width: 1440px;
+  height: 600px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 188px;
@@ -313,7 +314,6 @@ button {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--color-grey, #2e2f42);
-  margin-bottom: 8px;
 }
 .team-item {
   font-weight: 400;
@@ -321,6 +321,7 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-slate, #434455);
+  margin-bottom: 8px;
 }
 
 .team-list {
@@ -334,6 +335,7 @@ button {
 }
 .team-icon {
   padding: 32px 0px;
+  text-align: center;
 }
 .team-text {
   background-color: #ffffff;
@@ -364,7 +366,7 @@ button {
 }
 
 .team-soc-link:hover,
-.team-soc-link:hover {
+.team-soc-link:focus {
   background-color: #404bbf;
 }
 .team-soc-icon {
@@ -377,7 +379,7 @@ button {
 .customers {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11px;
+  line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
@@ -398,9 +400,9 @@ button {
 .customers-soc-link {
   width: 100%;
   height: 100%;
-  border: 1px solid #8e8f99;
+  border: 1px solid currentColor;
   border-radius: 4px;
-  fill: currentColor;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -409,7 +411,6 @@ button {
 
 .customers-soc-link:hover,
 .customers-soc-link:focus {
-  border-color: #404bbf;
   color: #404bbf;
 }
 .customers-soc-icon {
@@ -422,9 +423,6 @@ button {
   background: var(--color-grey, #2e2f42);
   padding-top: 100px;
   padding-bottom: 100px;
-  max-width: 1140px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .footer-logo {
@@ -460,7 +458,7 @@ button {
   letter-spacing: 0.02em;
   color: var(--color-cloud, #f4f4fd);
   margin-top: 18px;
-  max-width: 300px;
+  max-width: 264px;
 }
 
 .footer-bottom {
@@ -475,7 +473,7 @@ button {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.5px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
   margin-bottom: 16px;
@@ -496,7 +494,7 @@ button {
 }
 
 .footer-soc-link:hover,
-.footer-soc-link:hover {
+.footer-soc-link:focus {
   background-color: #31d0aa;
 }
 .footer-soc-icon {
@@ -510,6 +508,4 @@ button {
 }
 .footer-soc-cont {
   display: flex;
-  align-items: stretch;
-  max-width: 1128px;
 }
